<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.example</groupId>
    <artifactId>test-app</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>test-app</name>
    <description>Test application with vulnerable dependencies</description>

    <properties>
        <java.version>11</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>2.3.1.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.apache.struts</groupId>
            <artifactId>struts2-core</artifactId>
            <version>2.5.12</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
Update commons-collections:commons-collections to version 3.2.2 or later. See https://nvd.nist.gov/vuln/detail/CVE-2015-6420, https://www.kb.cert.org/vuls/id/576313, https://commons.apache.org/proper/commons-collections/security-reports.html for more information.\nUpdate org.apache.struts:struts2-core to version 2.5.13 or later. See https://nvd.nist.gov/vuln/detail/CVE-2017-5638, https://cwiki.apache.org/confluence/display/WW/S2-045, https://github.com/apache/struts/pull/107 for more information.\nUpdate commons-collections:commons-collections to version 3.2.2 or later. See https://nvd.nist.gov/vuln/detail/CVE-2015-6420, https://www.kb.cert.org/vuls/id/576313, https://commons.apache.org/proper/commons-collections/security-reports.html for more information.\nUpdate org.apache.struts:struts2-core to version 2.5.13 or later. See https://nvd.nist.gov/vuln/detail/CVE-2017-5638, https://cwiki.apache.org/confluence/display/WW/S2-045, https://github.com/apache/struts/pull/107 for more information.\nUpdate commons-collections:commons-collections to version 3.2.2 or later. See https://nvd.nist.gov/vuln/detail/CVE-2015-6420, https://www.kb.cert.org/vuls/id/576313, https://commons.apache.org/proper/commons-collections/security-reports.html for more information.\nUpdate org.apache.struts:struts2-core to version 2.5.13 or later. See https://nvd.nist.gov/vuln/detail/CVE-2017-5638, https://cwiki.apache.org/confluence/display/WW/S2-045, https://github.com/apache/struts/pull/107 for more information.\n